--- a/java/res/values-zh-rCN/strings.xml
+++ b/java/res/values-zh-rCN/strings.xml
@@ -39,8 +39,6 @@
     <string name="include_other_imes_in_language_switch_list_summary" msgid="840637129103317635">"语言切换键也可用于切换其他输入法"</string>
     <string name="show_language_switch_key" msgid="5915478828318774384">"语言切换键"</string>
     <string name="show_language_switch_key_summary" msgid="7343403647474265713">"启用了多种输入语言时显示"</string>
-    <!-- no translation found for sliding_key_input_preview (8793911873468181898) -->
-    <skip />
     <string name="key_preview_popup_dismiss_delay" msgid="6213164897443068248">"弹出字符隐藏延迟"</string>
     <string name="key_preview_popup_dismiss_no_delay" msgid="2096123151571458064">"无延迟"</string>
     <string name="key_preview_popup_dismiss_default_delay" msgid="2166964333903906734">"默认"</string>
@@ -125,12 +123,8 @@
     <string name="keyboard_layout" msgid="8451164783510487501">"键盘主题"</string>
     <string name="subtype_en_GB" msgid="88170601942311355">"英语（英国）"</string>
     <string name="subtype_en_US" msgid="6160452336634534239">"英语（美国）"</string>
-    <!-- no translation found for subtype_es_US (5583145191430180200) -->
-    <skip />
     <string name="subtype_with_layout_en_GB" msgid="2179097748724725906">"英语（英国）（<xliff:g id="LAYOUT">%s</xliff:g>）"</string>
     <string name="subtype_with_layout_en_US" msgid="1362581347576714579">"英语（美国）（<xliff:g id="LAYOUT">%s</xliff:g>）"</string>
-    <!-- no translation found for subtype_with_layout_es_US (6261791057007890189) -->
-    <skip />
     <string name="subtype_no_language" msgid="141420857808801746">"无语言"</string>
     <string name="subtype_no_language_qwerty" msgid="2956121451616633133">"无语言（QWERTY 键盘）"</string>
     <string name="subtype_no_language_qwertz" msgid="1177848172397202890">"无语言（QWERTZ 键盘）"</string>
@@ -155,9 +149,13 @@
     <string name="prefs_keypress_vibration_duration_settings" msgid="1829950405285211668">"按键振动持续时间设置"</string>
     <string name="prefs_keypress_sound_volume_settings" msgid="5875933757082305040">"按键音量设置"</string>
     <string name="prefs_read_external_dictionary" msgid="2588931418575013067">"读取外部词典文件"</string>
-    <string name="read_external_dictionary_no_files_message" msgid="4947420942224623792">"“下载内容”文件夹中没有词典文件"</string>
-    <string name="read_external_dictionary_multiple_files_title" msgid="7637749044265808628">"选择要安装的词典文件"</string>
-    <string name="read_external_dictionary_confirm_install_message" msgid="6898610163768980870">"确定要为<xliff:g id="LOCALE_NAME">%s</xliff:g>安装此文件吗？"</string>
-    <string name="error" msgid="8940763624668513648">"出现错误"</string>
+    <!-- no translation found for read_external_dictionary_no_files_message (4947420942224623792) -->
+    <skip />
+    <!-- no translation found for read_external_dictionary_multiple_files_title (7637749044265808628) -->
+    <skip />
+    <!-- no translation found for read_external_dictionary_confirm_install_message (6898610163768980870) -->
+    <skip />
+    <!-- no translation found for error (8940763624668513648) -->
+    <skip />
     <string name="button_default" msgid="3988017840431881491">"默认"</string>
 </resources>
