--- a/java/res/values-ka/strings.xml
+++ b/java/res/values-ka/strings.xml
@@ -58,7 +58,9 @@
     <skip />
     <!-- no translation found for show_language_switch_key_summary (7343403647474265713) -->
     <skip />
-    <!-- no translation found for sliding_key_input_preview (8793911873468181898) -->
+    <!-- no translation found for sliding_key_input_preview (6604262359510068370) -->
+    <skip />
+    <!-- no translation found for sliding_key_input_preview_summary (6340524345729093886) -->
     <skip />
     <!-- no translation found for key_preview_popup_dismiss_delay (6213164897443068248) -->
     <skip />
